# wgfast_2025

./: .gitignore  .readthedocs.yaml  EchopypePrep.ipynb  README.md  wgfast.yml
.virtual_documents/tutorials/: notebook_demo.ipynb  python_datan.ipynb  python_pandas_xarray.ipynb
tutorials/: Agenda.md  Nearfield.csv  Untitled.ipynb  Writing a function.ipynb  _config.yml  _toc.yml  agenda.md  git_intro.md  git_setup.md  github_desktop_setup.md  github_intro.md  github_setup.md  landing.md  notebooks.html  obsPython.md  overview.md  pre-ws_download_install.md  pre_workshop_setup.md  python.html  python.ipynb  python_bkg.md  python_datan.ipynb  python_editors.md  python_install.md  python_jupyter.ipynb  python_package.ipynb  python_pandas.ipynb  python_pandas_xarray.ipynb  python_pkgmgmt.md  python_plotting.ipynb  python_why.md  requirements.txt  tool_echopype_basics.md  tool_echopype_demo.md  tool_echopype_exercise.ipynb  tool_echoshader_demo.ipynb  tool_interoperate.md
tutorials/_build/.doctrees/: Agenda.doctree  environment.pickle  git_intro.doctree  git_setup.doctree  github_desktop_setup.doctree  github_intro.doctree  github_setup.doctree  landing.doctree  markdown-notebooks.doctree  notebooks.doctree  overview.doctree  pre_workshop_setup.doctree  python.doctree  python_bkg.doctree  python_datan.doctree  python_editors.doctree  python_install.doctree  python_jupyter.doctree  python_package.doctree  python_packages.doctree  python_pandas_xarray.doctree  (+8 more)
tutorials/python_package/: LICENSE  README.md  pyproject.toml
tutorials/python_package/uwa/: __init__.py  wave.py
(+56 files in other folders)
